--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WarmindoInspirasiIndonesia"
         tools:targetApi="31">
+        <activity
+            android:name=".UpdateAnggotaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddPenggunaActivity"
+            android:exported="false" />
         <activity
             android:name=".AddRoleActivity"
             android:exported="false" />
