--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name=".UpdatePenggunaActivity"
+            android:parentActivityName=".CRUDPenggunaActivity"
             android:exported="false" />
         <activity
             android:name=".UpdateAnggotaActivity"
