warung masih gagal tambah dt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
+            android:name=".AddWarungActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddTransaksiActivity"
             android:exported="false" />
         <activity
